--- a/cluster/apps/monitoring/vector/aggregator/helm-release.yaml
+++ b/cluster/apps/monitoring/vector/aggregator/helm-release.yaml
@@ -91,7 +91,7 @@ spec:
             filename: >-
               {{`{{ kubernetes.file }}`}}
             instance: >-
-              {{`{{ kubernetes.pod_labels.app\.kubernetes\.io/instance }}`}}
+              {{`{{ kubernetes.pod_labels."app.kubernetes.io/instance" }}`}}
             namespace: >-
               {{`{{ kubernetes.pod_namespace }}`}}
             node: >-
