--- a/.config.sample.env
+++ b/.config.sample.env
@@ -56,7 +56,7 @@ export BOOTSTRAP_ANSIBLE_DEFAULT_NODE_HOSTNAME_PREFIX="k8s-"
 export BOOTSTRAP_ANSIBLE_HOST_ADDR_0=""
 # User Ansible will log into the nodes
 export BOOTSTRAP_ANSIBLE_SSH_USERNAME_0=""
-# Password Ansible will use to esculate to sudo
+# Password Ansible will use to escalate to sudo
 export BOOTSTRAP_ANSIBLE_SUDO_PASSWORD_0=""
 # Set this node as a control node (true/false)
 export BOOTSTRAP_ANSIBLE_CONTROL_NODE_0=""
