--- a/cluster/apps/flux-system/monitoring/pod-monitor.yaml
+++ b/cluster/apps/flux-system/monitoring/pod-monitor.yaml
@@ -1,8 +1,8 @@
+---
 apiVersion: monitoring.coreos.com/v1
 kind: PodMonitor
 metadata:
   name: flux-system
-  namespace: flux-system
   labels:
     app.kubernetes.io/part-of: flux
 spec:
@@ -12,13 +12,7 @@ spec:
   selector:
     matchExpressions:
       - key: app
-        operator: In
-        values:
-          - helm-controller
-          - source-controller
-          - kustomize-controller
-          - notification-controller
-          - image-automation-controller
-          - image-reflector-controller
+        operator: Exists
   podMetricsEndpoints:
     - port: http-prom
+      honorLabels: true
