Revert "swap vector for promtail"
This reverts commit 9e9202b1239bd4c84cf2cd3b2dd968f0db28e2dd.

--- a/cluster/apps/monitoring/promtail/helm-release.yaml
+++ b/cluster/apps/monitoring/promtail/helm-release.yaml
@@ -51,6 +51,6 @@ spec:
         containerPort: 1514
         service:
           type: LoadBalancer
-          loadBalancerIP: ${METALLB_SYSLOG_ADDR}
+          loadBalancerIP: ${SVC_SYSLOG_ADDR}
     serviceMonitor:
       enabled: true
