--- a/cluster/apps/media/jellyfin/helm-release.yaml
+++ b/cluster/apps/media/jellyfin/helm-release.yaml
@@ -44,6 +44,7 @@ spec:
     persistence:
       config:
         enabled: true
+        size: 10Gi
       transcode:
         enabled: true
         type: emptyDir
