--- a/cluster/apps/media/plex/helm-release.yaml
+++ b/cluster/apps/media/plex/helm-release.yaml
@@ -2,64 +2,60 @@
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
-  name: jellyfin
-  namespace: media
+  name: plex
 spec:
   interval: 5m
   chart:
     spec:
-      # renovate: registryUrl=https://k8s-at-home.com/charts/
-      chart: jellyfin
-      version: 9.3.0
+      chart: plex
+      version: 6.2.2
       sourceRef:
         kind: HelmRepository
         name: k8s-at-home-charts
         namespace: flux-system
+      interval: 5m
+  install:
+    createNamespace: true
   values:
     image:
-      repository: jellyfin/jellyfin
-      tag: 10.7.7
+      repository: ghcr.io/k8s-at-home/plex
+      tag: v1.26.0.5715-8cf78dab3
     env:
       TZ: "${TZ}"
-      JELLYFIN_CACHE_DIR: /config/cache
     podSecurityContext:
       fsGroup: ${FS_GROUP}
     service:
       main:
         type: LoadBalancer
         externalIPs:
-          - "${METALLB_JELLYFIN_ADDR}"
+          - "${METALLB_PLEX_ADDR}"
         externalTrafficPolicy: Local
     ingress:
       main:
         enabled: true
+        ingressClassName: "nginx"
         annotations:
-          cert-manager.io/cluster-issuer: letsencrypt-production
-          hajimari.io/enable: "true"
-          hajimari.io/icon: plex
-          kubernetes.io/ingress.class: traefik
-          traefik.ingress.kubernetes.io/router.entrypoints: websecure
+          external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_PUBLIC_DOMAIN}"
+          external-dns/is-public: "true"
+          nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
         hosts:
-          - host: &host "{{ .Release.Name }}.${CLUSTER_DOMAIN}"
+          - host: &host "plex.${SECRET_PUBLIC_DOMAIN}"
             paths:
               - path: /
                 pathType: Prefix
         tls:
-          - secretName: "{{ .Release.Name }}-tls"
-            hosts:
+          - hosts:
               - *host
     persistence:
       config:
         enabled: true
         size: 10Gi
-      transcode:
-        enabled: true
-        type: emptyDir
-        medium: Memory
       media:
         enabled: true
         existingClaim: media-pv-claim
-        mountPath: /media
+      transcode:
+        enabled: true
+        type: emptyDir
     affinity:
       nodeAffinity:
         requiredDuringSchedulingIgnoredDuringExecution:
@@ -72,8 +68,8 @@ spec:
     resources:
       requests:
         gpu.intel.com/i915: 1
-        cpu: 500m
-        memory: 500Mi
+        cpu: 100m
+        memory: 2000Mi
       limits:
         gpu.intel.com/i915: 1
-        memory: 4000Mi
+        memory: 10000Mi
