--- a/cluster/apps/media/jellyfin/helm-release.yaml
+++ b/cluster/apps/media/jellyfin/helm-release.yaml
@@ -34,7 +34,7 @@ spec:
       main:
         enabled: true
         annotations:
-          external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_PUBLIC_DOMAIN}"
+          external-dns.alpha.kubernetes.io/target: "ipv4.${CLUSTER_DOMAIN}"
           external-dns/is-public: "true"
           cert-manager.io/cluster-issuer: letsencrypt-production
           hajimari.io/enable: "true"
