--- a/cluster/apps/media/plex/helm-release.yaml
+++ b/cluster/apps/media/plex/helm-release.yaml
@@ -42,7 +42,7 @@ spec:
           kubernetes.io/ingress.class: traefik
           traefik.ingress.kubernetes.io/router.entrypoints: websecure
         hosts:
-          - host: &host "plex.${SECRET_PUBLIC_DOMAIN}"
+          - host: &host "plex.${CLUSTER_DOMAIN}"
             paths:
               - path: /
                 pathType: Prefix
