--- a/cluster/apps/paperless/paperless/helm-release.yaml
+++ b/cluster/apps/paperless/paperless/helm-release.yaml
@@ -38,7 +38,7 @@ spec:
       PAPERLESS_TIKA_GOTENBERG_ENDPOINT: http://paperless-gotenberg:3000
       PAPERLESS_TIKA_ENDPOINT: http://paperless-tika:9998
       PAPERLESS_TIME_ZONE: ${TZ}
-      PAPERLESS_URL: *host
+      PAPERLESS_URL: &host "{{ .Release.Name }}.${CLUSTER_DOMAIN}"
     ingress:
       main:
         enabled: true
@@ -50,7 +50,7 @@ spec:
           traefik.ingress.kubernetes.io/router.entrypoints: websecure
           traefik.ingress.kubernetes.io/router.middlewares: kube-system-traefik-forward-auth@kubernetescrd
         hosts:
-          - host: &host "{{ .Release.Name }}.${CLUSTER_DOMAIN}"
+          - host: *host
             paths:
               - path: /
                 pathType: Prefix
