--- a/cluster/apps/paperless/paperless/helm-release.yaml
+++ b/cluster/apps/paperless/paperless/helm-release.yaml
@@ -35,8 +35,8 @@ spec:
       PAPERLESS_OCR_LANGUAGE: eng
       PAPERLESS_PORT: 8000
       PAPERLESS_TIKA_ENABLED: 1
-      PAPERLESS_TIKA_GOTENBERG_ENDPOINT: http://paperless-gotenberg:3000
-      PAPERLESS_TIKA_ENDPOINT: http://paperless-tika:9998
+      PAPERLESS_TIKA_GOTENBERG_ENDPOINT: http://{{ .Release.Name }}-gotenberg:3000
+      PAPERLESS_TIKA_ENDPOINT: http://{{ .Release.Name }}-tika:9998
       PAPERLESS_TIME_ZONE: ${TZ}
       PAPERLESS_URL: &host "{{ .Release.Name }}.${CLUSTER_DOMAIN}"
     ingress:
