--- a/cluster/base/cluster-secrets.sops.yaml
+++ b/cluster/base/cluster-secrets.sops.yaml
@@ -8,6 +8,9 @@ stringData:
     CLUSTER_DOMAIN: ENC[AES256_GCM,data:TJFhTIHTjMggz4RIeyQ=,iv:r9CQmH9UkDCc6FPDarrPNtD8Ao80U2AQcXrvPh8I5Z4=,tag:3k63J0OfSauqI3Gnq9DssQ==,type:str]
     SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:7D82csWXp23VHwICrU1jfiL99sRzcQ==,iv:9mCit3FG+ScmM5PFQD2I2F1SAwRyld2gCA1212K/lKk=,tag:TVyPz50+ANoaRO/n+ytt2g==,type:str]
     FS_GROUP: ENC[AES256_GCM,data:qBu6XtI=,iv:hJr+vmBfVkJKI60VVlnASQETO0J2aMpuMJJ6ku84S58=,tag:cFhF3ulhB3LA4xfG3kqoZw==,type:str]
+    SECRET_EMQX_ADMIN_PASSWORD: ENC[AES256_GCM,data:bFla41tySt80xNXRZch/idr+AtQ4joxVk40PgBMuOfrYVWAmgGt0Rw==,iv:EbjaA8yjXNScSv3xtNvJTnyEZiftLIuPydp25UAngLI=,tag:Z3LxYyRgU6VyXEXhN6/Yhg==,type:str]
+    SECRET_MQTT_USERNAME: ENC[AES256_GCM,data:bVyNnw==,iv:Vhnm4c+d/qFcDvaZdVOMP3dvHnzl1SEuPUF7mHOaQA0=,tag:T95ZzGnjXKWnTiLf7rpuAQ==,type:str]
+    SECRET_MQTT_PASSWORD: ENC[AES256_GCM,data:exV2hmp89mvc8tyQ322V+5M18usWQs6tlHmladwge/LK1N+mlto/Vw==,iv:VasKJxjt5rXltxBkUfNahuk5MVY9o8CvsGGFhSDDLQ8=,tag:l73y63BLj3yvAoeyzHgXSg==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -23,8 +26,8 @@ sops:
             dmI2WGo1U3Zsajh0SW1NdDVQSzdta00K62QXC1trBAOuX0AJKxlvuhcnWmMiqYOC
             TFsZ7rtqxrhaGFVYkMz2CqUTcwIWrd42tFKN3Ue1GkdTXzvMSBJDBQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-04-26T05:46:58Z"
-    mac: ENC[AES256_GCM,data:BJz2D8koBX3M+WQkR3jrJmNOATFW6F2xhcxnw5bhNmp9GZz1LU+cZiVRfktLtGrZ687hSJUoVMDwKWL4S7Tmaj/byDndPJke8XfATvYsy6fici3Syi8qAs9dxo4XFMqO9lb06D4xpL1xdSIJF0mmDLegE3pZMA4Dul/CjG54ta0=,iv:wVkZQxyazWCQ3uosQVOHOJOJtw8eKibCirFyq3czFBc=,tag:ddWTyp6AWpJBinxYpd+YMw==,type:str]
+    lastmodified: "2022-04-30T05:30:14Z"
+    mac: ENC[AES256_GCM,data:SQ30zVL7MyR+7llT8nhsrnNAOLtajY9rdjlVamOZV6amiQGokg9Ra9uTez9HNgTAe9XNin/vqT6dw5s9hT6b//ndxS0FykxHBC0qeojavUqrS8ktYIzgBwglh/Q/UAVdS/Ft2ITQeEvexOVMVfBgGZlVunnBrILbKFul/AxzniU=,iv:YFZlo7mv43qd5OlReLeo40bv6wYN5NCKALXDOXWdK4M=,tag:t3P4YfdzVhjADa0vTYDO4Q==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.2
