--- a/cluster/apps/home/emqx/helm-release.yaml
+++ b/cluster/apps/home/emqx/helm-release.yaml
@@ -55,7 +55,8 @@ spec:
         prometheus.io/probe: "true"
         prometheus.io/protocol: tcp
       type: LoadBalancer
-      loadBalancerIP: ${METALLB_EMQX_ADDR}
+      externalIPs:
+        - "${METALLB_EMQX_ADDR}"
       externalTrafficPolicy: Local
 
     ingress:
@@ -82,16 +83,3 @@ spec:
         memory: 150Mi
       limits:
         memory: 512Mi
-  postRenderers:
-    - kustomize:
-        patchesJson6902:
-          - target:
-              kind: Service
-              name: emqx
-            patch:
-              - op: remove
-                path: /spec/loadBalancerIP
-              - op: add
-                path: /spec/externalIPs
-                value:
-                  - "${METALLB_EMQX_ADDR}"
