--- a/cluster/base/cluster-settings.yaml
+++ b/cluster/base/cluster-settings.yaml
@@ -12,6 +12,7 @@ data:
   METALLB_BLOCKY_ADDR: 192.168.1.223
   METALLB_QBITTORRENT_ADDR: 192.168.1.224
   METALLB_VECTOR_AGGREGATOR_ADDR: 192.168.1.225
+  METALLB_EMQX_ADDR: 192.168.1.226
   METALLB_PLEX_ADDR: 192.168.1.227
   NAS_ADDR: 192.168.1.128
   GATEWAY_IP: 192.168.1.1
