--- a/cluster/core/kubernetes-dashboard/helm-release.yaml
+++ b/cluster/core/kubernetes-dashboard/helm-release.yaml
@@ -26,6 +26,7 @@ spec:
       annotations:
         cert-manager.io/cluster-issuer: letsencrypt-production
         kubernetes.io/ingress.class: traefik
+        hajimari.io/appName: kubernetes
         hajimari.io/enable: "true"
         hajimari.io/icon: view-dashboard
         traefik.ingress.kubernetes.io/router.middlewares: kube-system-traefik-forward-auth@kubernetescrd
