--- a/cluster/apps/home/home-assistant/helm-release.yaml
+++ b/cluster/apps/home/home-assistant/helm-release.yaml
@@ -36,6 +36,7 @@ spec:
           cert-manager.io/cluster-issuer: letsencrypt-production
           external-dns.alpha.kubernetes.io/target: ipv4.${CLUSTER_DOMAIN}
           external-dns/is-public: "true"
+          hajimari.io/appName: home assistant
           hajimari.io/enable: "true"
           hajimari.io/icon: home-lightbulb
           kubernetes.io/ingress.class: traefik
@@ -82,6 +83,7 @@ spec:
           enabled: true
           annotations:
             cert-manager.io/cluster-issuer: letsencrypt-production
+            hajimari.io/appName: home assistant code
             hajimari.io/enable: "true"
             hajimari.io/icon: code-braces
             kubernetes.io/ingress.class: traefik
