--- a/cluster/apps/home/emqx/helm-release.yaml
+++ b/cluster/apps/home/emqx/helm-release.yaml
@@ -54,6 +54,7 @@ spec:
       annotations:
         prometheus.io/probe: "true"
         prometheus.io/protocol: tcp
+      type: LoadBalancer
       loadBalancerIP: ${METALLB_EMQX_ADDR}
 
     ingress:
