--- a/cluster/apps/monitoring/loki/helm-release.yaml
+++ b/cluster/apps/monitoring/loki/helm-release.yaml
@@ -33,6 +33,8 @@ spec:
             - *host
     serviceMonitor:
       enabled: true
+      additionalLabels:
+        job: ingester
     config:
       limits_config:
         enforce_metric_name: false
