--- a/cluster/base/cluster-secrets.sops.yaml
+++ b/cluster/base/cluster-secrets.sops.yaml
@@ -11,6 +11,8 @@ stringData:
     SECRET_EMQX_ADMIN_PASSWORD: ENC[AES256_GCM,data:bFla41tySt80xNXRZch/idr+AtQ4joxVk40PgBMuOfrYVWAmgGt0Rw==,iv:EbjaA8yjXNScSv3xtNvJTnyEZiftLIuPydp25UAngLI=,tag:Z3LxYyRgU6VyXEXhN6/Yhg==,type:str]
     SECRET_MQTT_USERNAME: ENC[AES256_GCM,data:bVyNnw==,iv:Vhnm4c+d/qFcDvaZdVOMP3dvHnzl1SEuPUF7mHOaQA0=,tag:T95ZzGnjXKWnTiLf7rpuAQ==,type:str]
     SECRET_MQTT_PASSWORD: ENC[AES256_GCM,data:exV2hmp89mvc8tyQ322V+5M18usWQs6tlHmladwge/LK1N+mlto/Vw==,iv:VasKJxjt5rXltxBkUfNahuk5MVY9o8CvsGGFhSDDLQ8=,tag:l73y63BLj3yvAoeyzHgXSg==,type:str]
+    SECRET_MINIO_THANOS_ACCESSKEY: ENC[AES256_GCM,data:IzbEOXjXuFyHw7cCoU3XkPGvw9WOYRUPrr87wDQ/vA==,iv:jVdXbYiFUmQLlELVYZizMsg7RmNi+z9Nf9e57W9/KaA=,tag:RBXtQT6hXQW6YuhzfnUhJQ==,type:str]
+    SECRET_MINIO_THANOS_SECRETKEY: ENC[AES256_GCM,data:Gc4k03WnAz5jEFmWhjZUCvETFPd91m/BkOU9AVpmV8wD86THJr+em35mRgm9mEaEIQmGzZ0EiS6p7buAVLhjDQ==,iv:SlpF3UwoidsWvlhCmjHP2QNWuqfF5r9+3X3uHq2Auos=,tag:NfTZ9BGpjpcfLen7yfEQvg==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -26,8 +28,8 @@ sops:
             dmI2WGo1U3Zsajh0SW1NdDVQSzdta00K62QXC1trBAOuX0AJKxlvuhcnWmMiqYOC
             TFsZ7rtqxrhaGFVYkMz2CqUTcwIWrd42tFKN3Ue1GkdTXzvMSBJDBQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-04-30T05:30:14Z"
-    mac: ENC[AES256_GCM,data:SQ30zVL7MyR+7llT8nhsrnNAOLtajY9rdjlVamOZV6amiQGokg9Ra9uTez9HNgTAe9XNin/vqT6dw5s9hT6b//ndxS0FykxHBC0qeojavUqrS8ktYIzgBwglh/Q/UAVdS/Ft2ITQeEvexOVMVfBgGZlVunnBrILbKFul/AxzniU=,iv:YFZlo7mv43qd5OlReLeo40bv6wYN5NCKALXDOXWdK4M=,tag:t3P4YfdzVhjADa0vTYDO4Q==,type:str]
+    lastmodified: "2022-04-30T18:30:24Z"
+    mac: ENC[AES256_GCM,data:jD8TdPt4HCar8YzFwvAaHJ9v3xxuyCDO9bHL2xGw14qzuOE0oAeQmFGroKre89M59Zd71Sr9sIATsthTOvDboaC37YtdrxJ1XnXE9c4QuWhH3ydiipX3CdF4l6S1XjFTvy0QM8oWRWCBFAbXDYZeJUysboI75ekXvwh7oKCVf5I=,iv:yHv7A7zzAFtjw5XoJNZi0Nug4IV0BuQIXpvkInabad0=,tag:30XRhF4ao8YBsnn0+MPZJw==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.2
