--- a/cluster/apps/monitoring/thanos/helm-release.yaml
+++ b/cluster/apps/monitoring/thanos/helm-release.yaml
@@ -56,7 +56,7 @@ spec:
     objstoreConfig:
       type: S3
       config:
-        bucket: thanos
+        bucket: thanos-storage
         endpoint: minio.monitoring.svc.cluster.local
         access_key: ${SECRET_MINIO_THANOS_ACCESSKEY}
         secret_key: ${SECRET_MINIO_THANOS_SECRETKEY}
