try and fix ingress

--- a/cluster/apps/monitoring/thanos/helm-release.yaml
+++ b/cluster/apps/monitoring/thanos/helm-release.yaml
@@ -46,12 +46,8 @@ spec:
           kubernetes.io/ingress.class: traefik
           traefik.ingress.kubernetes.io/router.entrypoints: websecure
           traefik.ingress.kubernetes.io/router.middlewares: kube-system-traefik-forward-auth@kubernetescrd
-        hosts:
-          - &host "thanos.${CLUSTER_DOMAIN}"
-        tls:
-          - hosts:
-              - *host
-            secretName: thanos-tls
+        hostname: "thanos.${CLUSTER_DOMAIN}"
+        tls: true
 
     objstoreConfig:
       type: S3
