--- a/cluster/core/minio-system/helm-release.yaml
+++ b/cluster/core/minio-system/helm-release.yaml
@@ -26,6 +26,9 @@ spec:
         namespace: flux-system
       interval: 5m
   values:
+    image:
+      repository: quay.io/minio/minio
+      tag: RELEASE.2022-04-26T01-20-24Z
     console:
       ingress:
         enabled: true
