--- a/cluster/apps/monitoring/thanos/helm-release.yaml
+++ b/cluster/apps/monitoring/thanos/helm-release.yaml
@@ -30,6 +30,9 @@ spec:
         namespace: flux-system
       interval: 5m
   values:
+    image:
+      repository: bitnami/thanos
+      tag: 0.25.2-scratch-r5
     query:
       enabled: true
       replicaLabels:
