--- a/cluster/apps/monitoring/kube-prometheus-stack/helm-release.yaml
+++ b/cluster/apps/monitoring/kube-prometheus-stack/helm-release.yaml
@@ -163,10 +163,6 @@ spec:
           - hosts:
               - *host
             secretName: prometheus-tls
-      thanosService:
-        enabled: true
-      thanosServiceMonitor:
-        enabled: true
       prometheusSpec:
         replicas: 1
         replicaExternalLabelName: "replica"
@@ -190,6 +186,12 @@ spec:
                 requests:
                   storage: 30Gi
         thanos:
+          image: quay.io/thanos/thanos:v0.25.2
+          version: v0.24.0
           objectStorageConfig:
             name: thanos-objstore-secret
             key: objstore.yml
+      thanosService:
+        enabled: true
+      thanosServiceMonitor:
+        enabled: true
