--- a/cluster/core/minio-system/helm-release.yaml
+++ b/cluster/core/minio-system/helm-release.yaml
@@ -38,8 +38,8 @@ spec:
         enabled: true
         annotations:
           cert-manager.io/cluster-issuer: letsencrypt-production
-          # hajimari.io/enable: "true"
-          # hajimari.io/icon: server
+          hajimari.io/enable: "true"
+          hajimari.io/icon: server
           kubernetes.io/ingress.class: traefik
           traefik.ingress.kubernetes.io/router.entrypoints: websecure
           traefik.ingress.kubernetes.io/router.middlewares: kube-system-traefik-forward-auth@kubernetescrd
