--- a/cluster/apps/monitoring/thanos/helm-release.yaml
+++ b/cluster/apps/monitoring/thanos/helm-release.yaml
@@ -57,7 +57,7 @@ spec:
       type: S3
       config:
         bucket: thanos
-        endpoint: operator.minio-system.svc.cluster.local
+        endpoint: minio.monitoring.svc.cluster.local
         access_key: ${SECRET_MINIO_THANOS_ACCESSKEY}
         secret_key: ${SECRET_MINIO_THANOS_SECRETKEY}
         insecure: true
