--- a/cluster/apps/monitoring/grafana/helm-release.yaml
+++ b/cluster/apps/monitoring/grafana/helm-release.yaml
@@ -110,8 +110,12 @@ spec:
           - name: Prometheus
             type: prometheus
             access: proxy
-            url: http://prometheus-prometheus.monitoring.svc.cluster.local:9090/
+            url: http://thanos-query .monitoring.svc.cluster.local:9090/
             isDefault: true
+          - name: Prometheus Direct
+            type: prometheus
+            access: proxy
+            url: http://prometheus-prometheus.monitoring.svc.cluster.local:9090/
           - name: Loki
             type: loki
             access: proxy
