--- a/cluster/apps/monitoring/loki/helm-release.yaml
+++ b/cluster/apps/monitoring/loki/helm-release.yaml
@@ -34,6 +34,27 @@ spec:
     serviceMonitor:
       enabled: true
     config:
+      distributor:
+        ring:
+          kvstore:
+            store: memberlist
+      ingester:
+        lifecycler:
+          ring:
+            kvstore:
+              store: memberlist
+            replication_factor: 1
+          final_sleep: 0s
+        chunk_idle_period: 5m
+        chunk_retain_period: 30s
+      memberlist:
+        abort_if_cluster_join_fails: false
+        bind_port: 7946
+        join_members:
+          - loki-headless.monitoring.svc.cluster.local:7946
+        max_join_backoff: 1m
+        max_join_retries: 10
+        min_join_backoff: 1s
       limits_config:
         enforce_metric_name: false
         reject_old_samples: true
