update loki ports

--- a/cluster/apps/monitoring/loki/helm-release.yaml
+++ b/cluster/apps/monitoring/loki/helm-release.yaml
@@ -88,6 +88,11 @@ spec:
           kvstore:
             store: inmemory
         enable_api: true
+    extraPorts:
+      - port: 7956
+        protocol: TCP
+        name: loki-gossip-ring
+        targetPort: 7946
     persistence:
       enabled: true
       accessModes:
