add loki storage

--- a/cluster/apps/monitoring/loki/helm-release.yaml
+++ b/cluster/apps/monitoring/loki/helm-release.yaml
@@ -20,6 +20,12 @@ spec:
     replicas: 1
     serviceMonitor:
       enabled: true
+    persistence:
+      enabled: true
+      accessModes:
+        - ReadWriteOnce
+      size: 10Gi
+      storageClassName: longhorn
     config:
       limits_config:
         enforce_metric_name: false
