--- a/cluster/apps/monitoring/grafana/helm-release.yaml
+++ b/cluster/apps/monitoring/grafana/helm-release.yaml
@@ -107,7 +107,7 @@ spec:
           - name: Loki
             orgId: 1
         datasources:
-          - name: Prometheus Direct
+          - name: Prometheus
             type: prometheus
             access: proxy
             url: http://prometheus-prometheus.monitoring.svc.cluster.local:9090/
