--- a/cluster/core/rook-ceph/cluster/helm-release.yaml
+++ b/cluster/core/rook-ceph/cluster/helm-release.yaml
@@ -41,10 +41,20 @@ spec:
         urlPrefix: /
         ssl: false
       storage:
-        useAllNodes: true
-        useAllDevices: true
+        useAllNodes: false
+        useAllDevices: false
         config:
           osdsPerDevice: "1"
+        nodes:
+          - name: k8s-0
+            devices:
+              - name: sda3
+          - name: k8s-1
+            devices:
+              - name: sda3
+          - name: k8s-2
+            devices:
+              - name: sda3
       resources:
         mgr:
           requests:
