--- a/cluster/core/rook-ceph/cluster/helm-release.yaml
+++ b/cluster/core/rook-ceph/cluster/helm-release.yaml
@@ -23,6 +23,8 @@ spec:
     toolbox:
       enabled: true
 
+    dataDirHostPath: /var/lib/rook
+
     ingress:
       ingressClassName: traefik
       dashboard:
@@ -50,16 +52,6 @@ spec:
         useAllDevices: false
         config:
           osdsPerDevice: "1"
-        nodes:
-          - name: k8s-0
-            devices:
-              - name: sda3
-          - name: k8s-1
-            devices:
-              - name: sda3
-          - name: k8s-2
-            devices:
-              - name: sda3
       resources:
         mgr:
           requests:
