--- a/cluster/core/rook-ceph/cluster/helm-release.yaml
+++ b/cluster/core/rook-ceph/cluster/helm-release.yaml
@@ -48,10 +48,11 @@ spec:
         urlPrefix: /
         ssl: false
       storage:
-        useAllNodes: false
+        useAllNodes: true
         useAllDevices: false
         config:
           osdsPerDevice: "1"
+        deviceFilter: sd[a-z]
       resources:
         mgr:
           requests:
